--- a/assets/files/style.css
+++ b/assets/files/style.css
@@ -38,40 +38,48 @@ body{
 
 .first{
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     position: relative;
 }
 
 .content{
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
-    /* overflow: hidden; */
+    min-height: 100vh;
+    /* background-color: lightcoral; */
+    overflow: hidden;
 }
+.heading{
+    width: 100%;
+    /* background-color: lightblue; */
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 
-.content h1{
+
+
+}
+.heading h1{    
     color: rgb(248, 220, 136);
-    font-size: 190px;
-    transform: scale(.9, 4);
+    font-size: 600px;
+    width: 100%;
+    /* background-color: lightblue; */
+    /* transform: scale(2, 2); */
     text-align: center;
     font-family: 'NCL Broesq', sans-serif;
-    /* font-family: 'Notable', sans-serif; */
-    /* font-family: 'Critical Mass LDR', sans-serif; */
-    font-weight: 100;
-    line-height: 170px;                                                
-    margin-top: 150px;
-    margin-bottom: 20%;
-    letter-spacing: 12px;
+    font-family: 'JunebugStompNF', sans-serif;
+    font-family: 'Sifonn', sans-serif;                                            
+    /* letter-spacing: 12px; */
+
 }
 
-.content h4{
+.heading h4{
     color: rgb(248, 220, 136);
     font-size: 50px;
     font-weight: 400;
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 22%;
-    margin-bottom: 30px;
-
 }
 
 
@@ -80,14 +88,16 @@ body{
 
 .second{
     width: 100%;
-    /* height: 100vh; */
+    height: 100%;
     position: relative;
-    margin-top: 150px;
     display: flex;
     flex-direction: column;
+    margin-top: 50px;
+    /* background-color: aliceblue; */
 }
 
 .video video{
+    /* position: absolute; */
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -96,7 +106,7 @@ body{
 .sec-text{
     /* position: absolute; */
     width: 100%;
-    /* height: 100%; */
+    /* height: 100vh; */
     display: flex;
     flex-direction: column;
     color: rgb(248, 220, 136);
@@ -135,14 +145,16 @@ body{
 
 .third{
     width: 100%;
-    height: 100vh;
-    position: relative;
+    /* background-color: red; */
     margin-top: 150px;
+    position: relative;
 }
 
 
 .cards{
-    height: 100%;
+    /* position: absolute; */
+    top: 20px;
+    /* height: 100%; */
     width: 100%;
     /* background-color: lightblue; */
     display: flex;
