--- a/assets/files/style.css
+++ b/assets/files/style.css
@@ -62,15 +62,12 @@ body{
 }
 .heading h1{    
     color: rgb(248, 220, 136);
-    font-size: 600px;
-    width: 100%;
+    font-size: 40vw;
     /* background-color: lightblue; */
-    /* transform: scale(2, 2); */
     text-align: center;
     font-family: 'NCL Broesq', sans-serif;
     font-family: 'JunebugStompNF', sans-serif;
     font-family: 'Sifonn', sans-serif;                                            
-    /* letter-spacing: 12px; */
 
 }
 
