--- a/assets/files/style.css
+++ b/assets/files/style.css
@@ -62,7 +62,7 @@ body{
 }
 .heading h1{    
     color: rgb(248, 220, 136);
-    font-size: 40vw;
+    font-size: 30vw;
     /* background-color: lightblue; */
     text-align: center;
     font-family: 'NCL Broesq', sans-serif;
@@ -143,8 +143,15 @@ body{
 .third{
     width: 100%;
     /* background-color: red; */
+    margin-bottom: 150px;
     margin-top: 150px;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
+
 }
 
 
@@ -156,6 +163,7 @@ body{
     /* background-color: lightblue; */
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
     column-count: 2;
     column-gap: 110px;
 }
@@ -260,17 +268,87 @@ body{
     margin-top: 15%;
 }
 
+.card5{
+    width: 900px;
+    height: 900px;
+    margin: 0 auto;
+
+}
+
+
+
+
+/* 
+
+.last-thr-sec-text{
+    border: 2px solid rgb(248, 220, 136);
+    border-radius: 50%;
+    margin-top: 100px;
+    width: 380px;
+    height: 140px;
+    color: rgb(248, 220, 136);
+    padding: 25px 40px;
+    font-size: 25px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    transition: .2s linear;
+}
+
+.last-thr-sec-text:hover{
+    transform: rotate(-20deg);
+    width: 400px;
+    height:170px;
+
+}
+
+.last-thr-sec-text p{
+    transform: rotate(0deg ) !important;
+
+}
+ */
 
 
 
 
 
 
+.last-thr-sec-text {
+    position: relative;
+    color: rgb(248, 220, 136);
+    font-size: 25px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    padding: 25px 40px;
+    margin-top: 100px;
+    /* display: flex;  */
+    line-height: 1; /* Tighten text alignment */
+}
 
+.last-thr-sec-text p {
+    position: relative; /* Keep text in flow */
+    z-index: 1; /* Above pseudo-element */
+    margin: 0;
+}
 
+.last-thr-sec-text::after {
+    content: '';
+    position: absolute;
+    top: -45%;
+    left: -5%;
+    width: 380px;
+    height: 150px;
+    border: 2px solid rgb(248, 220, 136);
+    border-radius: 50%;
+    z-index: 0; /* Behind text */
+    transition: .2s linear;
+}
 
-
-
-
-
-
+.last-thr-sec-text:hover::after {
+    transform:  rotate(-20deg) scale(1.1, 1.3);
+    width: 380px;
+    /* height: 170px; */
+}
