--- a/assets/files/style.css
+++ b/assets/files/style.css
@@ -36,6 +36,10 @@ body{
     font-size: 20px;
 }
 
+
+
+
+
 .first{
     width: 100%;
     /* height: 100vh; */
@@ -319,7 +323,8 @@ body{
 .last-thr-sec-text {
     position: relative;
     color: rgb(248, 220, 136);
-    font-size: 25px;
+    font-size: 20px;
+    text-transform: uppercase;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
     padding: 25px 40px;
@@ -329,7 +334,7 @@ body{
 }
 
 .last-thr-sec-text p {
-    position: relative; /* Keep text in flow */
+    position: relative;
     z-index: 1; /* Above pseudo-element */
     margin: 0;
 }
@@ -340,7 +345,7 @@ body{
     top: -45%;
     left: -5%;
     width: 380px;
-    height: 150px;
+    height: 140px;
     border: 2px solid rgb(248, 220, 136);
     border-radius: 50%;
     z-index: 0; /* Behind text */
