--- a/assets/files/style.css
+++ b/assets/files/style.css
@@ -334,8 +334,6 @@ body{
     flex-direction: column;
     align-items: center;
 
-
-
 }
 
 .pg-heading{
@@ -343,9 +341,9 @@ body{
     /* height: 100%; */
     background-color: rgb(17, 123, 158);
     overflow-x: hidden;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
 }
 
 .pg-heading h1{
@@ -362,6 +360,16 @@ body{
 
 
 
+.fifth{
+    height: 100vh;
+    width: 100%;
+    background-color: rgb(138, 99, 245);
+
+    /* margin-top: 200px; */
+    margin-bottom: 200px;
+    position: relative;
+
+}
 
 
 
