--- a/assets/files/style.css
+++ b/assets/files/style.css
@@ -330,9 +330,6 @@ body{
     width: 100%;
     background-color: rgb(225, 245, 99);
     position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 
 }
 
@@ -341,9 +338,8 @@ body{
     /* height: 100%; */
     background-color: rgb(17, 123, 158);
     overflow-x: hidden;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
+    
+
 }
 
 .pg-heading h1{
@@ -359,19 +355,22 @@ body{
 
 
 
-
 .fifth{
     height: 100vh;
     width: 100%;
-    background-color: rgb(138, 99, 245);
-
-    /* margin-top: 200px; */
-    margin-bottom: 200px;
+    margin-top: 200px;
+    background-color: rgb(184, 99, 245);
     position: relative;
+    display: flex;
 
 }
 
-
+.boxi{
+    height: 300px;
+    width: 300px;
+    background-color: lightblue;
+    margin: 50px 20px;
+}
 
 
 
