--- a/assets/files/style.css
+++ b/assets/files/style.css
@@ -328,7 +328,6 @@ body{
 .fourth{
     /* height: 100vh; */
     width: 100%;
-    background-color: rgb(225, 245, 99);
     position: relative;
 
 }
@@ -336,7 +335,7 @@ body{
 .pg-heading{
     width: 100%;
     /* height: 100%; */
-    background-color: rgb(17, 123, 158);
+    background-color: rgb(18, 135, 174);
     overflow-x: hidden;
     
 
@@ -369,7 +368,7 @@ body{
 .boxi{
     height: 300px;
     width: 300px;
-    background-color: lightblue;
+    /* background-color: lightblue; */
     margin: 50px 20px;
 }
 
