--- a/assets/files/style.css
+++ b/assets/files/style.css
@@ -64,9 +64,19 @@ body{
 
 
 }
-.heading h1{    
+
+.big-heading{
+    width: 100%;
+    height: 100vh;
+    /* background-color: rgb(217, 173, 230); */
+    overflow: hidden;
+}
+
+
+
+.big-heading h1{    
     color: rgb(248, 220, 136);
-    font-size: 30vw;
+    font-size: 40vw;
     /* background-color: lightblue; */
     text-align: center;
     font-family: 'NCL Broesq', sans-serif;
@@ -74,7 +84,6 @@ body{
     font-family: 'Sifonn', sans-serif;                                            
 
 }
-
 .heading h4{
     color: rgb(248, 220, 136);
     font-size: 50px;
