--- a/assets/files/style.css
+++ b/assets/files/style.css
@@ -69,6 +69,8 @@ body{
     width: 100%;
     height: 100vh;
     /* background-color: rgb(217, 173, 230); */
+    display: flex;
+    justify-content: center;
     overflow: hidden;
 }
 
