--- a/assets/files/style.css
+++ b/assets/files/style.css
@@ -337,17 +337,18 @@ body{
 
 
 .fourth{
-    /* height: 100vh; */
+    height: 100vh;
     width: 100%;
     position: relative;
-
+    overflow: hidden;
 }
 
 .pg-heading{
     width: 100%;
     /* height: 100%; */
     background-color: rgb(18, 135, 174);
-    overflow-x: hidden;
+    overflow: hidden;
+    /* overflow-x: hidden; */
     position: relative;
 
 }
@@ -365,8 +366,38 @@ body{
     top: 30%;
     width: 250px;
     height: 250px;
-    margin-left: 50px
 }
+
+.one{
+    position: absolute;
+    left: 10%;
+}
+
+.two{
+    position: absolute;
+    left: 40%;
+}
+
+
+.thr{
+    position: absolute;
+    left: 60%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
