--- a/assets/files/style.css
+++ b/assets/files/style.css
@@ -385,9 +385,17 @@ body{
 }
 
 
+.pg-heading img {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 10;
+}
 
 
-
+.one { left: 2%; } /* On 'X' */
+.two { left: calc(2% + 28vw); } /* Between 'R' and 'T' */
+.thr { left: calc(2% + 68vw); } /* Between 'S' and 'E' */
 
 
 
