--- a/assets/files/style.css
+++ b/assets/files/style.css
@@ -52,21 +52,34 @@ body{
 
 .logo{
     color: rgb(231, 208, 177);
-    font-size: 30px;
-    padding: 30px;
+    height: 80%;
+    text-align: center;
+    font-size: 25px;    
+    /* background-color: red; */
+    margin-left: 20px;
+    padding: 0px 30px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
 .nav-links{
     display: flex;
     align-items: center;
+    list-style: none;
+    margin-right: 20px;
 }
-
+.nav-links li{
+    padding: 30px;
+    /* background-color: red; */
+}
 .nav-links a{
     color: rgb(231, 208, 177);
     
     text-decoration: none;
-    padding: 30px;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 
@@ -115,6 +128,8 @@ body{
     font-size: 40vw;
     overflow: hidden;
     opacity: 0;
+    transform: scaleY(1);
+    /* letter-spacing: -20px; */
     /* background-color: lightblue; */
     text-align: center;
     font-family: 'NCL Broesq', sans-serif;
@@ -127,7 +142,7 @@ body{
     /* overflow: hidden; */
     /* background-color: red; */
     font-size: 50px;
-    font-weight: 400;
+    font-weight: 500;
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
