--- a/assets/files/style.css
+++ b/assets/files/style.css
@@ -80,12 +80,12 @@ body{
 .loader-bar {
     height: 100%; /* Changed to 100% height */
     width: 20%; /* 5 bars, each 20% width = 100% */
-    background-color: rgb(231, 208, 177); /* Prominent accent color */
+    background-color: rgb(243, 199, 124); /* Prominent accent color */
     transform-origin: top; /* For scaleY animation */
 }
 /* Alternate bar colors for visual effect */
 .loader-bar:nth-child(even) {
-    background-color: rgb(231, 208, 177); /* Prominent accent color */
+    background-color: rgb(243, 199, 124); /* Prominent accent color */
 }
 
 .logo-container {
@@ -167,9 +167,13 @@ body{
 .nav-links a{
     color: rgb(231, 208, 177);
     
+    position: relative;
     text-decoration: none;
     font-size: 18px;
 }
+
+
+
 
 
 
